strings and regexp readme